<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Business Carder</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="edit_button">Edit</string>
    <string name="share_button">Share</string>
    <string name="title_activity_edit">Edit Card Information</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="send_chooser">Share using...</string>
    <string name="option_header">Card Information</string>
    <string name="option_name">Name:</string>
    <string name="option_phone">Phone Number:</string>
    <string name="option_email">Email: </string>
    <string name="action_clear">Clear All</string>
    <string name="option_orientation">Card Orientation:</string>
    <string name="orientation_port">Portrait</string>
    <string name="orientation_land">Landscape</string>
    <string name="options_job_title">Job Title: </string>
    <string name="submit_button">Apply Changes</string>
    <string name="option_theme">Card Theme:</string>
    <string name="PREFS_KEY">io.github.vontell.businesscarder.PREFS_KEY</string>
    <string name="start_here_string">Create a\nbusiness\ncard by\nclicking\nedit below</string>
    <string name="option_image">Logo/Image:</string>
    <string name="option_website">Website:</string>
    <string name="option_font">Text Font:</string>
    <string name="font_default">Default</string>
    <string name="dialog_font">Choose a font</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

</resources>
