<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroller"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/options_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="io.github.vontell.businesscarder.EditActivity" >

        <TextView
            android:id="@+id/option_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:text="@string/option_header"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/attri_column"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/option_title"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/start_text"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_height"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:text="@string/option_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_height"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:text="@string/option_phone"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_height"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:text="@string/option_email"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_height"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:text="@string/option_website"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_height"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:text="@string/options_job_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_height"
                android:gravity="center_vertical"
                android:text="@string/option_image"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_height"
                android:gravity="center_vertical"
                android:text="@string/option_theme"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_height"
                android:gravity="center_vertical"
                android:text="@string/option_font"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/radio_group_height"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical"
                android:text="@string/option_orientation"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/attri_column"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_toRightOf="@+id/attri_column"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/name_view"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/row_height"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:ems="10"
                android:inputType="textPersonName|textCapWords"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/phone_view"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/row_height"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:ems="10"
                android:inputType="phone"
                android:selectAllOnFocus="true" >

            </EditText>

            <EditText
                android:id="@+id/email_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" >

            </EditText>

            <EditText
                android:id="@+id/website_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:ems="10"
                android:inputType="textUri"
                android:selectAllOnFocus="true" >

            </EditText>

            <EditText
                android:id="@+id/title_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:ems="10"
                android:inputType="textCapSentences"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:gravity="center_vertical|center_horizontal"
                android:text="Coming soon!"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/secondary_text_dark" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:gravity="center_vertical|center_horizontal"
                android:text="Coming soon!"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/secondary_text_dark" />

            <Button
                android:id="@+id/font_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_height"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@android:drawable/ic_input_get"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="openFonts"
                android:text="@string/font_default"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/orientation_group"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/radio_group_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin" >

                <RadioButton
                    android:id="@+id/radio_land"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/orientation_land" />

                <RadioButton
                    android:id="@+id/radio_port"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/orientation_port" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/attri_column"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:onClick="applyChanges"
            android:text="@string/submit_button" />
    </RelativeLayout>

</ScrollView>